    'internal' will no longer trigger a NOTE (@grimbough, #59)

USER SIGNIFICANT CHANGES

    o (1.25.3) Require Aurhors@R format over Author/Maintainer fields in the
    DESCRIPTION file. This has been upgraded to an ERROR.
    o (1.25.2) Resolve <https://github.com/Bioconductor/BiocCheck/issues/57>: Suggest
    styler over formatR for automatic code re-formatting.


CHANGES IN VERSION 1.23
-----------------------

BUG FIX

    o (1.23.4) Update locations for NEWS
    o (1.23.1) Fix False Positive class == check

CHANGES IN VERSION 1.19
-----------------------

NEW FEATURES

    o (1.19.33) Add Authors@R vs Author/Maintainer check
    o (1.19.29) Add non evaluated code chunks that have not been executed
    because of invalid syntax (```, ```R, ```r). Valid syntax for an evaluated
    code chunk takes the form ```{r} or ```{R}.
    o (1.19.28) Check that vignette metadata set correctly
    o (1.19.27) Check for Author@R or Author/Maintainer but not both
    o (1.19.25) Check for use of remotes: in Description
    o (1.19.18) Check for use of dontrun/donttest
    o (1.19.15) Check vignetteEngine/vignetteBuilder minimially declared in
    Suggests
    o (1.19.9) Check usage of donttest and dontrun in man page documentation
    o (1.19.9) Update deprecated check to check for Bioconductor release and
    devel deprecated packages as specified in biocViews
    o (1.19.7) More helpful ERROR when using a non valid command line option.
    o (1.19.4) All checks module. Ability to turn on/off with flag options. See
    'R CMD BiocCheck --help'
    o (1.19.1) New Check options to turn off if in CRAN (--no-check-CRAN) and
    Bioconductor mailing list and support site (--no-check-bioc-help)

USER SIGNIFICANT CHANGES

    o (1.19.8) Updated Documentation in vignette for flag/option controls and
    reorganization of code/checks. Grouped similar checks together and changed
    order of checks.
    o (1.19.3) Remove Native Routine Registrations (use flag in R CMD check